sam-internal/k8s-out/prd/prd-sam/sherpa-injector-register-webhook-test.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  labels:
    app: sherpa-injector
  name: sherpa-injector-cfg
webhooks:
- clientConfig:
    caBundle: IwojIFRISVMgRklMRSBJUyBGT1IgUFJPRFVDVElPTiBPTkxZCiMKIyBOT1RFOiBETyBOT1QgTEVBVkUgQU4gRU1QVFkgTElORSBBVCBUSEUgRU5EIE9GIFRISVMgRklMRQojCiMgVXNlOiBrZXl0b29sIC1wcmludGNlcnQgLXYgLWZpbGUgY2FjZXJ0cy5wZW0KIwojCiMgT3duZXI6IENOPXNhbGVzZm9yY2UuY29tIEludGVybmFsIFJvb3QgQ0EgMSwgTz0ic2FsZXNmb3JjZS5jb20sIGluYy4iLCBDPVVTCiMgSXNzdWVyOiBDTj1zYWxlc2ZvcmNlLmNvbSBJbnRlcm5hbCBSb290IENBIDEsIE89InNhbGVzZm9yY2UuY29tLCBpbmMuIiwgQz1VUwojIFNlcmlhbCBudW1iZXI6IGRhZDI4ZDg0M2ZjNzMzMjVkNGMxYTc1MjA3ZDRlNzQKIyBWYWxpZC [...]
    url: https://sherpa-injector.mesh-control-plane.svc.prd-sam.prd.sam.sfdc.net:17442/mutate
  failurePolicy: Fail
  name: sherpa-injector.service-mesh.svc
  namespaceSelector:
    matchLabels:
      sherpa-injection: enabled
  rules:
  - apiGroups:
    - apps
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
